--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
-					<source>14</source>
-					<target>14</target>
+					<source>17.0.7</source>
+					<target>17.0.7</target>
 				</configuration>
 			</plugin>
 		</plugins>
