--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
 	<name>Eureka-Server</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>17.0.8</java.version>
 		<spring-cloud.version>2022.0.3</spring-cloud.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.release>17.0.7</maven.compiler.release>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -51,14 +51,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>17.0.7</source>
-					<target>17.0.7</target>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
