--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,8 @@
 	<name>Eureka-Server</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17.0.8</java.version>
+		<java.version>17</java.version>
 		<spring-cloud.version>2022.0.3</spring-cloud.version>
-		<maven.compiler.release>17.0.7</maven.compiler.release>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -33,6 +32,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.9.0</version>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
